implemented transactions page & backend transactions

--- a/api/.env.template
+++ b/api/.env.template
@@ -6,4 +6,7 @@ DB_PASSWORD=MySecr3tPassWord@as2
 DB_NAME=authdb
 DB_PORT=5432
 
-JWT_SECRET=MySecr3tPassWord@as2
+JWT_SECRET=
+
+PAGOPLUX_USER=
+PAGOPLUX_PASSWORD=
